fix: Json key typo

--- a/get_lessons_and_tasks_payload.json
+++ b/get_lessons_and_tasks_payload.json
@@ -247,7 +247,7 @@
                 ]
                 }
             ],
-            "tasks": ["task1", "task2", "task3", "task4"]
+            "taskIds": ["task1", "task2", "task3", "task4"]
         }
     ],
     "tasks": [
