fix: Link tasks

--- a/get_lessons_and_tasks_payload.json
+++ b/get_lessons_and_tasks_payload.json
@@ -346,7 +346,8 @@
                     }
                 ]
                 }
-            ]
+            ],
+            "taskIds": ["task5", "task6", "task7"]
             }
     ],
     "tasks": [
